--- a/front/package.json
+++ b/front/package.json
@@ -8,18 +8,18 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@accuser/svelte-plausible-analytics": "^0.3.0",
+		"@accuser/svelte-plausible-analytics": "github:dgrebb/svelte-plausible-analytics#release/v0.4.0",
 		"@iconify/svelte": "^3.1.4",
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-static": "^2.0.2",
-		"@sveltejs/kit": "^1.15.2",
+		"@sveltejs/kit": "^1.20.2",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.24",
 		"postcss-nesting": "^11.2.2",
-		"svelte": "^3.54.0",
+		"svelte": "^3.59.1",
 		"svelte-meta-tags": "^2.8.0",
 		"tailwindcss": "^3.3.2",
-		"vite": "^4.3.0"
+		"vite": "^4.3.9"
 	},
 	"type": "module",
 	"dependencies": {
