chore(back): override vite@<5.0.12 with vite@>=5.0.12
GHSA-c24v-8rfc-w8vw https://github.com/dgrebb/dgrebb.com/security/dependabot/50

--- a/back/package.json
+++ b/back/package.json
@@ -37,5 +37,13 @@
   "strapi": {},
   "devDependencies": {
     "prop-types": "^15.8.1"
+  },
+  "overrides": {
+    "vite": "^4.5.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "vite@<5.0.12": ">=5.0.12"
+    }
   }
 }
