chore(backstop): overrides proxy-agent@<6.4.0 for CVE-2023-42282
https://github.com/advisories/GHSA-78xj-cgh5-2h22

--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -36,5 +36,10 @@
     "node": ">=16.0.0 <=20.x.x",
     "npm": ">=6.0.0",
     "pnpm": ">= 8.14.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "proxy-agent@<6.4.0": "^6.4.0"
+    }
   }
 }
