chore(back): overrides tar@<6.2.1 in both backend and perf tools
CVE-2024-28863 GHSA-f5x3-32g6-xq36

--- a/back/package.json
+++ b/back/package.json
@@ -46,7 +46,8 @@
       "vite@<5.1.7": ">=5.1.7",
       "webpack-dev-middleware@<6.1.2": ">=6.1.2",
       "follow-redirects@<1.15.6": ">=1.15.6",
-      "sanitize-html@<2.12.1": ">=2.12.1"
+      "sanitize-html@<2.12.1": ">=2.12.1",
+      "tar@<6.2.1": ">=6.2.1"
     }
   }
 }
