--- a/_ci/perf/package.json
+++ b/_ci/perf/package.json
@@ -21,14 +21,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "axe-core": "^4.8.4",
+    "axe-core": "^4.9.0",
     "axe-html-reporter": "^2.2.3",
-    "lighthouse": "11.6.0",
+    "lighthouse": "11.7.1",
     "psi": "^4.1.0",
-    "wallace-cli": "^3.0.0"
-  },
-  "dependencies": {
-    "npm-check-updates": "^16.14.12"
+    "wallace-cli": "^3.0.0",
+    "npm-check-updates": "^16.14.18"
   },
   "engines": {
     "node": ">=16.0.0 <=20.x.x",
@@ -40,7 +38,8 @@
       "node-forge@<1.3.0": ">=1.3.0",
       "got@<11.8.5": ">=11.8.5",
       "json-bigint@<1.0.0": ">=1.0.0",
-      "ip@<2.0.1": ">=2.0.1"
+      "ip@<2.0.1": ">=2.0.1",
+      "tar@<6.2.1": ">=6.2.1"
     }
   }
 }
