chore(ci): force braces>=3.0.3 to address CVE-2024-4068

--- a/_ci/spell/package.json
+++ b/_ci/spell/package.json
@@ -20,5 +20,10 @@
     "@html-to/text-cli": "^0.5.4",
     "cspell-cli": "github:streetsidesoftware/cspell-cli",
     "gramma": "^1.6.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "braces@<3.0.3": ">=3.0.3"
+    }
   }
 }
