--- a/_ci/perf/package.json
+++ b/_ci/perf/package.json
@@ -35,6 +35,7 @@
   },
   "pnpm": {
     "overrides": {
+      "braces@<3.0.3": ">=3.0.3",
       "node-forge@<1.3.0": ">=1.3.0",
       "got@<11.8.5": ">=11.8.5",
       "json-bigint@<1.0.0": ">=1.0.0",
