--- a/back/package.json
+++ b/back/package.json
@@ -43,6 +43,7 @@
   },
   "pnpm": {
     "overrides": {
+      "braces@<3.0.3": ">=3.0.3",
       "vite@<5.1.7": ">=5.1.7",
       "webpack-dev-middleware@<6.1.2": ">=6.1.2",
       "follow-redirects@<1.15.6": ">=1.15.6",
